# backend

./: pyproject.toml
Scripts/: activate.bat
backend/: pyvenv.cfg
backend/Scripts/: activate
